<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="ielite.app.myappportfolio.MainActivity"
        tools:showIn="@layout/activity_main">

        <LinearLayout
            android:id="@+id/llButtonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/title"
                android:textColor="@color/textblack"
                android:textSize="@dimen/titlesize"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/btnSpotifyStreamer"
                style="@style/OrangeButton"
                android:text="@string/spotifystreamer"/>

            <Button
                android:id="@+id/btnScoresApp"
                style="@style/OrangeButton"
                android:text="@string/scoresapp" />

            <Button
                android:id="@+id/btnLibraryApp"
                style="@style/OrangeButton"
                android:text="@string/libraryapp"/>

            <Button
                android:id="@+id/btnBuildItBigger"
                style="@style/OrangeButton"
                android:text="@string/builditbigger"/>

            <Button
                android:id="@+id/btnXyzReader"
                style="@style/OrangeButton"
                android:text="@string/xyzreader"/>

            <Button
                android:id="@+id/btnCapstone"
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_marginTop="@dimen/marginmiddlebutton"
                android:background="@color/redbackroundbutton"
                android:onClick="displayMessage"
                android:text="@string/capstone"
                android:textColor="@color/textwhite"
                android:textSize="@dimen/textbuttonsize" />


        </LinearLayout>

    </RelativeLayout>

</ScrollView>
